--- a/RawBencher/RawBencher.csproj
+++ b/RawBencher/RawBencher.csproj
@@ -288,8 +288,8 @@
     <Compile Include="Benchers\LLBLGenProResultsetCachingBencher.cs" />
     <Compile Include="Benchers\LLBLGenProNoChangeTrackingBencher.cs" />
     <Compile Include="Benchers\LLBLGenProNormalBencher.cs" />
-    <Compile Include="Benchers\RepoDbBencher.cs" />
-    <Compile Include="Benchers\RepoDbPersistentBencher .cs" />
+    <Compile Include="Benchers\RepoDbPocoBencher.cs" />
+    <Compile Include="Benchers\RepoDbRawSqlBencher.cs" />
     <Compile Include="BencherUtils.cs" />
     <Compile Include="BenchResult.cs" />
     <Compile Include="Benchers\PetaPocoBencher.cs" />
