--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -41,7 +41,7 @@
   <package id="NPoco" version="3.9.4" targetFramework="net462" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net462" />
   <package id="Remotion.Linq.EagerFetching" version="2.2.0" targetFramework="net462" />
-  <package id="RepoDb" version="1.6.0" targetFramework="net462" />
+  <package id="RepoDb" version="1.5.3" targetFramework="net462" />
   <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.3.3-hotfix-20180129" targetFramework="net462" />
   <package id="ServiceStack.Common" version="5.1.0" targetFramework="net462" />
   <package id="ServiceStack.Interfaces" version="5.1.0" targetFramework="net462" />
@@ -55,7 +55,7 @@
   <package id="System.ComponentModel" version="4.3.0" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net462" />
   <package id="System.ComponentModel.Primitives" version="4.3.0" targetFramework="net461" />
-  <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="net461" />
   <package id="System.Console" version="4.3.1" targetFramework="net462" />
   <package id="System.Data.SqlClient" version="4.5.0" targetFramework="net462" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
@@ -63,12 +63,12 @@
   <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net461" />
-  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net461" />
   <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net461" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
   <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net461" />
   <package id="System.Interactive.Async" version="3.1.1" targetFramework="net461" />
-  <package id="System.IO" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.IO" version="4.3.0" targetFramework="net461" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net461" />
   <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net461" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net461" />
@@ -80,16 +80,16 @@
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net461" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net461" />
-  <package id="System.Reflection" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Metadata" version="1.6.0" targetFramework="net462" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net462" />
-  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net461" />
-  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net462" />
