--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -41,6 +41,7 @@
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net462" />
   <package id="Remotion.Linq.EagerFetching" version="2.2.0" targetFramework="net462" />
   <package id="RepoDb" version="1.6.4" targetFramework="net462" />
+  <package id="SD.LLBLGen.Pro.DQE.SqlServer" version="5.5.0-Beta-20181019" targetFramework="net462" />
   <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.5.0-Beta-20181019" targetFramework="net462" />
   <package id="ServiceStack.Common" version="5.4.0" targetFramework="net462" />
   <package id="ServiceStack.Interfaces" version="5.4.0" targetFramework="net462" />
