Reverted back to FransBouma's basic settings on the following files: RawBencher.Core.csproj, App.config

--- a/RawBencher.Core/RawBencher.Core.csproj
+++ b/RawBencher.Core/RawBencher.Core.csproj
@@ -29,11 +29,16 @@
       <Compile Include="..\RawBencher\Benchers\NPocoBencher.cs" Link="Benchers\NPocoBencher.cs" />
       <Compile Include="..\RawBencher\Benchers\OrmLiteBencher.cs" Link="Benchers\OrmLiteBencher.cs" />
       <Compile Include="..\RawBencher\Benchers\RawDbDataReaderBencher.cs" Link="Benchers\RawDbDataReaderBencher.cs" />
+      <Compile Include="..\RawBencher\Benchers\RepoDbPocoBencher.cs" Link="Benchers\RepoDbPocoBencher.cs" />
       <Compile Include="..\RawBencher\Benchers\RepoDbRawSqlBencher.cs" Link="Benchers\RepoDbRawSqlBencher.cs" />
       <Compile Include="..\RawBencher\BencherUtils.cs" Link="BencherUtils.cs" />
       <Compile Include="..\RawBencher\BenchResult.cs" Link="BenchResult.cs" />
       <Compile Include="..\RawBencher\Product.cs" Link="Product.cs" />
       <Compile Include="..\RawBencher\SalesOrderHeader.cs" Link="SalesOrderHeader.cs" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Benchers\" />
     </ItemGroup>
 
     <ItemGroup>
@@ -50,7 +55,7 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.2" />
       <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
       <PackageReference Include="NPoco" Version="3.9.4" />
-      <PackageReference Include="RepoDb" Version="1.8.0" />
+      <PackageReference Include="RepoDb" Version="1.8.2" />
       <PackageReference Include="SD.LLBLGen.Pro.DQE.SqlServer" Version="5.5.2" />
       <PackageReference Include="ServiceStack.OrmLite.SqlServer" Version="5.4.0" />
       <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
