Updated packages to latest GA releases, ran both sets in full, updated GetValue boxing bencher, added handwritten bencher for GetFieldValue<T>.

--- a/RawBencher.Core/RawBencher.Core.csproj
+++ b/RawBencher.Core/RawBencher.Core.csproj
@@ -18,6 +18,9 @@
       <Compile Include="..\RawBencher\Benchers\HandCodedBencher.cs" Link="Benchers\HandCodedBencher.cs" />
       <Compile Include="..\RawBencher\Benchers\HandCodedBencherUsingBoxing.cs" Link="Benchers\HandCodedBencherUsingBoxing.cs" />
       <Compile Include="..\RawBencher\Benchers\HandCodedBencherUsingBoxingGetValue.cs" Link="Benchers\HandCodedBencherUsingBoxingGetValue.cs" />
+      <Compile Include="..\RawBencher\Benchers\HandCodedBencherUsingGetFieldValue.cs">
+        <Link>Benchers\HandCodedBencherUsingGetFieldValue.cs</Link>
+      </Compile>
       <Compile Include="..\RawBencher\Benchers\IBencher.cs" Link="Benchers\IBencher.cs" />
       <Compile Include="..\RawBencher\Benchers\LINQ2DBCompiledBencher.cs" Link="Benchers\LINQ2DBCompiledBencher.cs" />
       <Compile Include="..\RawBencher\Benchers\LINQ2DBNormalBencher.cs" Link="Benchers\LINQ2DBNormalBencher.cs" />
@@ -52,20 +55,20 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Dapper" Version="1.60.1" />
-      <PackageReference Include="linq2db" Version="2.6.4" />
+      <PackageReference Include="Dapper" Version="1.60.6" />
+      <PackageReference Include="linq2db" Version="2.7.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.4" />
       <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
       <PackageReference Include="NPoco" Version="3.9.4" />
-      <PackageReference Include="RepoDb" Version="1.8.2" />
-      <PackageReference Include="SD.LLBLGen.Pro.DQE.SqlServer" Version="5.5.2" />
-      <PackageReference Include="ServiceStack.OrmLite.SqlServer" Version="5.4.0" />
+      <PackageReference Include="RepoDb" Version="1.9.5" />
+      <PackageReference Include="SD.LLBLGen.Pro.DQE.SqlServer" Version="5.5.3" />
+      <PackageReference Include="ServiceStack.OrmLite.SqlServer" Version="5.5.0" />
       <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
       <PackageReference Include="Tortuga.Anchor" Version="2.1.7001.32222" />
       <PackageReference Include="Tortuga.Chain.CompiledMaterializers" Version="2.1.7009.34082" />
       <PackageReference Include="Tortuga.Chain.Core" Version="2.1.7009.31212" />
       <PackageReference Include="Tortuga.Chain.SqlServer" Version="2.1.7009.33175" />
-      <PackageReference Include="System.Data.SqlClient" Version="4.6.0" />
+      <PackageReference Include="System.Data.SqlClient" Version="4.6.1" />
     </ItemGroup>
 
 </Project>
