--- a/LINQ2DB/DAL/LINQ2DB.Bencher.csproj
+++ b/LINQ2DB/DAL/LINQ2DB.Bencher.csproj
@@ -31,8 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="linq2db, Version=2.6.4.0, Culture=neutral, PublicKeyToken=e41013125f9e410a, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\linq2db.2.6.4\lib\net46\linq2db.dll</HintPath>
+    <Reference Include="linq2db, Version=2.7.0.0, Culture=neutral, PublicKeyToken=e41013125f9e410a">
+      <HintPath>..\..\packages\linq2db.2.7.0\lib\net46\linq2db.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
