--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -2,16 +2,16 @@
 <packages>
   <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net462" />
   <package id="CS-Script.bin" version="3.28.7" targetFramework="net462" />
-  <package id="Dapper" version="1.60.1" targetFramework="net462" />
+  <package id="Dapper" version="1.60.6" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net462" />
   <package id="Iesi.Collections" version="4.0.4" targetFramework="net462" />
   <package id="Ix-Async" version="1.2.5" targetFramework="net46" />
-  <package id="linq2db" version="2.6.4" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.3" targetFramework="net462" developmentDependency="true" />
-  <package id="Microsoft.CodeAnalysis.Common" version="2.10.0" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="2.10.0" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="2.10.0" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="2.10.0" targetFramework="net462" />
+  <package id="linq2db" version="2.7.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="2.9.2" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.Common" version="3.0.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="3.0.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="3.0.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="3.0.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net462" />
   <package id="Microsoft.DotNet.InternalAbstractions" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.DotNet.PlatformAbstractions" version="2.1.0" targetFramework="net462" />
@@ -24,7 +24,7 @@
   <package id="Microsoft.Extensions.Caching.Memory" version="2.2.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.Configuration" version="2.2.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="2.2.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.2.4" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection" version="2.2.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.2.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.Logging" version="2.2.0" targetFramework="net462" />
@@ -32,22 +32,22 @@
   <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.OptionsModel" version="1.0.0-rc1-final" targetFramework="net451" />
   <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net462" />
-  <package id="Microsoft.NETCore.Platforms" version="2.2.0" targetFramework="net462" />
+  <package id="Microsoft.NETCore.Platforms" version="2.2.1" targetFramework="net472" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="Microsoft.Win32.Registry" version="4.5.0" targetFramework="net462" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net462" />
-  <package id="NHibernate" version="5.2.4" targetFramework="net462" />
+  <package id="NHibernate" version="5.2.5" targetFramework="net472" />
   <package id="NPoco" version="3.9.4" targetFramework="net462" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net462" />
   <package id="Remotion.Linq.EagerFetching" version="2.2.0" targetFramework="net462" />
-  <package id="RepoDb" version="1.8.2" targetFramework="net472" />
-  <package id="SD.LLBLGen.Pro.DQE.SqlServer" version="5.5.2" targetFramework="net462" />
-  <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.5.2" targetFramework="net462" />
-  <package id="ServiceStack.Common" version="5.4.0" targetFramework="net462" />
-  <package id="ServiceStack.Interfaces" version="5.4.0" targetFramework="net462" />
-  <package id="ServiceStack.OrmLite" version="5.4.0" targetFramework="net462" />
-  <package id="ServiceStack.OrmLite.SqlServer" version="5.4.0" targetFramework="net462" />
-  <package id="ServiceStack.Text" version="5.4.0" targetFramework="net462" />
+  <package id="RepoDb" version="1.9.5" targetFramework="net472" />
+  <package id="SD.LLBLGen.Pro.DQE.SqlServer" version="5.5.3" targetFramework="net472" />
+  <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.5.3" targetFramework="net472" />
+  <package id="ServiceStack.Common" version="5.5.0" targetFramework="net472" />
+  <package id="ServiceStack.Interfaces" version="5.5.0" targetFramework="net472" />
+  <package id="ServiceStack.OrmLite" version="5.5.0" targetFramework="net472" />
+  <package id="ServiceStack.OrmLite.SqlServer" version="5.5.0" targetFramework="net472" />
+  <package id="ServiceStack.Text" version="5.5.0" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net462" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
@@ -58,7 +58,7 @@
   <package id="System.ComponentModel.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Console" version="4.3.1" targetFramework="net462" />
-  <package id="System.Data.SqlClient" version="4.6.0" targetFramework="net462" />
+  <package id="System.Data.SqlClient" version="4.6.1" targetFramework="net472" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net462" />
   <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net461" />
@@ -77,9 +77,9 @@
   <package id="System.Linq" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net461" />
-  <package id="System.Memory" version="4.5.2" targetFramework="net462" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net462" />
-  <package id="System.Net.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Net.Primitives" version="4.3.1" targetFramework="net472" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net461" />
@@ -104,7 +104,7 @@
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.Encoding.CodePages" version="4.5.1" targetFramework="net462" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net461" />
-  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net462" />
