update linq2db bencher

--- a/LINQ2DB/DAL/LINQ2DB.Bencher.csproj
+++ b/LINQ2DB/DAL/LINQ2DB.Bencher.csproj
@@ -46,9 +46,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Db.cs" />
+    <Compile Include="CreditCard.cs" />
+    <Compile Include="Customer.cs" />
+    <Compile Include="SalesOrderDetail.cs" />
     <Compile Include="SalesOrderHeader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SalesOrderHeaderRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
